--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,4 +2,65 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  border: dotted;
+}
+
+header {
+  background-color: black;
+  color: rgba(255, 255, 255, 0.96);
+  padding: 1.5rem;
+  text-align: center;
+}
+
+main {
+  height: 90vh;
+  width: 90%;
+  margin: auto;
+}
+
+#index {
+  display: flex;
+
+  justify-content: center;
+  /* text-align: center;  */
+  align-items: center;
+}
+
+/* h2{
+  justify-content: center;
+} */
+
+#title {
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#card {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin: 20px auto;
+  align-items: center;
+  gap: 10px;
+}
+
+ul{
+  list-style: none;
+}
+
+li {
+  width: 200px;
+  height: 100px;
+  text-align: center;
+  
+
+  
+}
+
+footer {
+  background-color: black;
+  color: rgba(255, 255, 255, 0.96);
 }
