--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -117,9 +117,11 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 #contSolution #solution {
+
   width: 50%;
   text-align: center;
 }
@@ -164,14 +166,15 @@ ul {
 li {
   display: flex;
   width: 100%;
-  height: 100px;
-  text-align: center;
-}
-
-.btns {
+  height: 100px;  
+  background-color: white;  
+  align-items: center;
+  justify-content: center;
   flex-grow: 1;
   border-radius: 5%;
 }
+
+
 
 footer {
   background-color: black;
