--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,13 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter&family=Lato:ital,wght@0,300;1,300&family=Montserrat:wght@400;700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter&family=Lato:ital,wght@0,300;1,300&family=Montserrat:wght@400;700&family=Raleway:wght@700&display=swap");
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Archivo Black", sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 16px;
 }
+
 @keyframes flicker {
   0%,
   20%,
@@ -49,10 +48,12 @@ header {
   color: rgba(255, 255, 255, 0.96);
   padding: 1rem;
   text-align: center;
+  opacity: 0.8;
 }
 
 header h1 {
   text-transform: uppercase;
+  font-size: 2rem;
 }
 
 main {
@@ -63,9 +64,7 @@ main {
 
 #index {
   display: flex;
-
   justify-content: center;
-
   align-items: center;
 }
 #index0 {
@@ -90,14 +89,17 @@ main {
 }
 
 #btnBack {
-  width: 80px;
-  height: 40px;
+  width: 60px;
+  height: 30px;
   cursor: pointer;
+  border: 0px;
+  border-radius: 4px;
+  opacity: 0.8;
 }
 
 #counter {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: rgba(255, 255, 255, 0.96);
   text-shadow: 1px 0.5px 2px rgb(0, 0, 0);
 }
@@ -122,6 +124,7 @@ main {
 #mute {
   width: 40px;
   height: 40px;
+  cursor: pointer;
 }
 
 #question {
@@ -130,6 +133,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  opacity: 0.8;
 }
 
 #question h2 {
@@ -140,7 +144,6 @@ main {
   width: 70%;
   margin-top: 2rem;
   color: rgba(255, 255, 255, 0.96);
-  text-shadow: 1px 0.5px 2px rgb(255, 255, 255);
   text-transform: uppercase;
 }
 #contSolution {
@@ -156,9 +159,10 @@ main {
 
 .solutionScore {
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: rgba(255, 255, 255, 0.96);
   text-shadow: 1px 0.5px 2px rgb(0, 0, 0);
+  font-weight: 600;
 }
 h3 {
   background-color: black;
@@ -175,6 +179,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 0.8;
 }
 #textStart {
   text-align: center;
@@ -218,6 +223,15 @@ ul button {
   border-radius: 8%;
   border: solid, gold, 10px;
   text-shadow: 1px 0.5px 2px rgb(255, 255, 255);
+}
+
+.btns {
+  padding: 8px 15px;
+  border: 0px;
+  border-radius: 4px;
+  opacity: 0.8;
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 .btns:hover {
